# childcare_agent

./: .env-template  .gitignore  README.md  pyproject.toml
memory/: chat_history.json
src/: __init__.py  main.py
src/api/: __init__.py  llm_client.py
src/config/: settings.py
src/intent/: classifier.py
src/memory/: memory_manager.py
src/utils/: logger.py
